// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form beforeSubmit 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": Object {
          "foo": 3,
        },
        "loading": true,
        "method": "POST",
        "url": "test",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;

exports[`Form redirectUrl fn 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      Object {
        "data": Object {
          "bar": 2,
          "foo": 1,
        },
        "loading": true,
        "method": "POST",
        "url": "test",
      },
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": Promise {
        "reject": [Function],
        "resolve": [Function],
      },
    },
  ],
}
`;
